stopped on mobile first css

--- a/style.css
+++ b/style.css
@@ -2,16 +2,18 @@
 
 /* global styles*/
 
-body{
-  font-family: 'barlow';
-  color: black;
-  font-size: $text;
-}
 *{
   margin: o;
   padding: 0;
   box-sizing: border-box;
 }
+
+body{
+  font-family: 'barlow';
+  color: black;
+  font-size: $text;
+}
+
 a{
   text-decoration: none;
   color: #ffffffff;
@@ -30,6 +32,7 @@ a{
 /* header*/
 
 .header{
+  padding-top: 2rem;
   color: #ffffffff;
   background: url(image/image-header.jpg) no-repeat center;
   background-size: cover;
@@ -61,17 +64,57 @@ li{
 .contact{
   background: white;
   border-radius: 3rem;
-  color: black;
+  color: #000;
   padding: 10px 25px;
 }
+
+/* hamburger icon*/
+.hamburger{
+  display: none;
+}
+
 .logo{
   padding: 10px 25px;
   font-size: 25px;font-weight: bold;
 }
+ /* main section*/
 
+ main img{
+  width: 100%;
+ }
+ .row>*{
+  padding: 0;
+ }
+ p{
+  line-height: 1.5;
+ }
 
-/* hamburger icon*/
-
-.hamburger{
-  display: none;
-}
+ .info{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 0 5rem;
+  color: black;
+ }
+ .info__description{
+  color: #333333;
+  margin: 1.5rem 0;
+ }
+ .link-trans{
+  color: #333333;
+  text-transform: uppercase;
+  font-family: 'barlow';
+  font-size: 16px;
+  font-weight: bold;
+ }
+ .img-collon{
+  width: 50%;
+  height: auto;
+ }
+ .img-col{
+  width: 50%;
+ }
+ 
+ .row{
+  grid-row: ;
+ }
